src/test/compile-fail/import-from-rename.rs
// error-pattern:expected

use baz = foo::{bar};

mod foo {
    #[legacy_exports];
    fn bar() {}
}

fn main() {
}